Update project mini 2

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="welcome-area" id="welcome">
         <div class="container">
             <div class="row">
-                <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
+                <div class="col-lg-6 offset-lg-3">
                     <div class="header-text">
                         <h1 class="header-title">We provide the best <strong>strategy</strong>
                             <br>
